@@ -1,3 +1,8 @@
+2009-05-13  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* generic/tkFont.c: [Bug 2791352] handle parsing of type 5 font
+	* tests/font.test: descriptions with hyphenated family name.
+
 2009-05-06  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* library/images/lamp.svg: Added an SVG version of the Tk lamp and
